dodat baner i mapa

--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
     <div class="category__list-item" onclick="pasteScroll()">
       <h3 class="category__list-item__item">Paste</h3>
     </div>
+    <!--/////////////////////// Baner ///////////////////////-->
+    <div class="banner">
+      <!-- title -->
+      <div class="banner__title-main-container">
+        <h1 class="banner__title-main-container__title">specijalitet dana</h1>
+      </div>
+      <!-- subtitle -->
+      <div class="banner__subtitle-main-container">
+        <h2 class="banner__subtitle-main-container__title">Rižoto sečuan</h2>
+      </div>
+      <!-- picture -->
+      <div class="banner__picture-container">
+        <img src="img/specijalitet-dana.jpg" alt="specijalitet dana" class="banner__picture-container__img">
+      </div>
+      <!-- ingredients and price -->
+      <div class="banner__ingredients-price-main-container">
+        <h2 class="banner__ingredients-price-main-container__ingredients">1326 kalorija | Rizoto sa sunkom, paprikom i lukom.</h2>
+        <h3 class="banner__ingredients-price-main-container__price">180,00rsd</h3>
+      </div>
+    </div>
+    <!--/////////////////////// End Baner ///////////////////////-->
   </div>
   <!--/////////////////////// End Category ///////////////////////-->
   <div class="content">
@@ -483,21 +504,21 @@
     </div>
     <!--/////////////////////// End Gallery ///////////////////////-->
     <!--/////////////////////// Utisci //////////////////////////-->
-    <div class="content__utisci-container">
+    <div class="content__comment-container">
       <!-- utisci title -->
-      <div class="content__utisci-container__title-main-container">
-        <h1 class="content__utisci-container__title-main-container__title">Utisci</h1>
+      <div class="content__comment-container__title-main-container">
+        <h1 class="content__comment-container__title-main-container__title">Utisci</h1>
       </div>
       <!-- utisci comment field -->
-      <div class="content__utisci-container__comment-container">
-        <h2 class="content__utisci-container__comment-container__comment-title">petar petrović</h2>
-        <span class="content__utisci-container__comment-container__star-container__date">13.05.2018</span>
-        <div class="content__utisci-container__comment-container__comment-text">
+      <div class="content__comment-container__comment-container">
+        <h2 class="content__comment-container__comment-container__comment-title">petar petrović</h2>
+        <span class="content__comment-container__comment-container__star-container__date">13.05.2018</span>
+        <div class="content__comment-container__comment-container__comment-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
           text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
           the industry's standard dummy text ever since the 1500s
         </div>
-        <div class="content__utisci-container__comment-container__star-container">
+        <div class="content__comment-container__comment-container__star-container">
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
@@ -507,15 +528,15 @@
         </div>
       </div>
       <!-- utisci comment field -->
-      <div class="content__utisci-container__comment-container">
-        <h2 class="content__utisci-container__comment-container__comment-title">petar petrović</h2>
-        <span class="content__utisci-container__comment-container__star-container__date">13.05.2018</span>
-        <div class="content__utisci-container__comment-container__comment-text">
+      <div class="content__comment-container__comment-container">
+        <h2 class="content__comment-container__comment-container__comment-title">petar petrović</h2>
+        <span class="content__comment-container__comment-container__star-container__date">13.05.2018</span>
+        <div class="content__comment-container__comment-container__comment-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
           text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
           the industry's standard dummy text ever since the 1500s
         </div>
-        <div class="content__utisci-container__comment-container__star-container">
+        <div class="content__comment-container__comment-container__star-container">
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
@@ -524,15 +545,15 @@
         </div>
       </div>
       <!-- utisci comment field -->
-      <div class="content__utisci-container__comment-container">
-        <h2 class="content__utisci-container__comment-container__comment-title">petar petrović</h2>
-        <span class="content__utisci-container__comment-container__star-container__date">13.05.2018</span>
-        <div class="content__utisci-container__comment-container__comment-text">
+      <div class="content__comment-container__comment-container">
+        <h2 class="content__comment-container__comment-container__comment-title">petar petrović</h2>
+        <span class="content__comment-container__comment-container__star-container__date">13.05.2018</span>
+        <div class="content__comment-container__comment-container__comment-text">
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
           text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
           the industry's standard dummy text ever since the 1500s
         </div>
-        <div class="content__utisci-container__comment-container__star-container">
+        <div class="content__comment-container__comment-container__star-container">
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
           <i class="fas fa-star yellow-star"></i>
@@ -541,22 +562,62 @@
         </div>
       </div>
       <!-- e-mail form -->
-      <div class="content__utisci-container__form-container">
+      <div class="content__comment-container__form-container">
         <form action="">
           <label for="name">Puno Ime</label>
-          <input class="content__utisci-container__form-container__input" type="text" id="name" name="name" placeholder="puno ime">
+          <input class="content__comment-container__form-container__input" type="text" id="name" name="name" placeholder="puno ime">
 
           <label for="email">E-mail</label>
-          <input class="content__utisci-container__form-container__input" type="text" id="email" name="lastname" placeholder="e-mail">
+          <input class="content__comment-container__form-container__input" type="text" id="email" name="lastname" placeholder="e-mail">
 
           <label for="comment">Tekst Komentara</label>
-          <input class="content__utisci-container__form-container__input input--comment" type="text" id="comment" name="lastname" placeholder="tekst komentara...">
+          <input class="content__comment-container__form-container__input input--comment" type="text" id="comment" name="lastname" placeholder="tekst komentara...">
 
-          <input class="content__utisci-container__form-container__input" type="submit" value="Postavite komentar">
+          <input class="content__comment-container__form-container__input" type="submit" value="Postavite komentar">
         </form>
       </div>
     </div>
     <!--/////////////////////// End Utisci //////////////////////////-->
+    <!--/////////////////////// Informacije-Mapa //////////////////////////-->
+    <div class="content__information-container">
+      <!-- informacije title -->
+      <div class="content__information-container__title-main-container">
+        <h1 class="content__information-container__title-main-container__title">Informacije</h1>
+      </div>
+      <!-- map -->
+      <div class="content__information-container__map-container">
+        <h3 class="content__information-container__map-container__title">Gde smo na mapi</h3>
+        <div class="content__information-container__map-container__map-holder" id="google-map-holder"></div>
+      </div>
+      <!-- adress -->
+      <div class="content__information-container__adress-container">
+        <h3><span style="color:#a40a0a; text-transform:uppercase">Adresa:</span>  Kralja Petra 1 br, 35 Kragujevac</h3>
+        <h3><span style="color:#a40a0a; text-transform:uppercase">telefon:</span> 011 33 44 55</h3>
+        <h3><span style="color:#a40a0a; text-transform:uppercase">dostava:</span> 011 66 77 88</h3>
+      </div>
+      <!-- working hours -->
+      <div class="content__information-container__working-hours-container">
+        <table class="content__information-container__working-hours-container__table">
+          <!-- table titles -->
+          <tr><th>Dani u nedelji:</th><th>Radno vreme:</th><th>Naručivanje:</th><th>Dostava:</th></tr>
+          <!-- table items -->
+          <tr><td>Ponedeljak</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Utorak</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Sreda</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Četvrtak</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Petak</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Subota</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+          <!-- table items -->
+          <tr><td>Nedelja</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td><td>10:00 - 22:00</td></tr>
+        </table>
+      </div>
+    </div>
+    <!--/////////////////////// End Informacije-Mapa //////////////////////////-->
   </div>
   <!--/////////////////////// Shopping Cart ///////////////////////-->
   <div class="shopping-cart">
@@ -595,7 +656,9 @@
   </div>
 </footer>
 
-
+<!-- google map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_YMLN9OsAJV0WRNMmWFb6SWf0_UGRzjI&callback=initMap"async defer></script>
+<!-- javascript -->
 <script src="js/main.js"></script>
 </body>
 </html>
